make soft delete write
