# docs/swagger.json
@@ -637,6 +637,21 @@
         }
     },
     "definitions": {
+        "github_com_techies_streamify_internal_database.UserRole": {
+            "type": "string",
+            "enum": [
+                "user",
+                "customer",
+                "admin",
+                "owner"
+            ],
+            "x-enum-varnames": [
+                "UserRoleUser",
+                "UserRoleCustomer",
+                "UserRoleAdmin",
+                "UserRoleOwner"
+            ]
+        },
         "github_com_techies_streamify_internal_models.UserResponse": {
             "type": "object",
             "properties": {
@@ -669,6 +684,9 @@
                 },
                 "phone_number": {
                     "type": "string"
+                },
+                "role": {
+                    "$ref": "#/definitions/github_com_techies_streamify_internal_database.UserRole"
                 },
                 "status": {
                     "type": "string"
